exemples/kubernetes/whoami/whoami-services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
