exemples/kubernetes/whoami/whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: "traefik"
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-bouncer@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: web
